UPDATE Dockerfile, java8, ccgroup JVM option